# klo-local

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agent2/: README.md  _smoke_bridge.py  _smoke_browser.py  _smoke_screenshot.py  _smoke_workspace.py  active_apps.py  agent.py  background_review.py  bridge.py  bridge_server.py  cloud_auth.py  cloud_bridge.py  cloud_config.py  cloud_mirror.py  cloud_skills.py  cloud_user_model.py  desktop_api.py  eval.py  mac_ops_client.py  memory.py  prompts.py  run.py  run_context.py  skills.py  status.py  system_info.py  tasks.py  tools.py  workspace.py
api/: __init__.py  config.py  deps.py  main.py
api/core/: __init__.py  accessibility.py  actions.py  browser.py  contract.py  coords.py  defaults.py  input.py  loop.py  loop_core.py  macos.py  openai_loop.py  os_context.py  (+7 more)
cli/: bench.py  doctor.py  klo  klo.py
desktop-mac/: README.md  klo_sidecar_entry.py  project.yml  sidecar.spec
docs/: architecture.md  extension.md  local-vs-hosted.md  privacy.md  tools.md
extension/: .gitignore  README.md  background.js  manifest.json  sidepanel.html  sidepanel.js
tests/: test_accessibility.py  test_actions.py  test_ae_probe_real.py  test_bench.py  test_bridge_reconnect.py  test_browser.py  test_coords.py  test_error_classifier.py  test_input.py  test_loop_reliability.py  test_loop_stub.py  test_openai_loop.py  test_os_context.py  test_redact.py  test_screenshot.py  test_sidecar_freshness.py  test_store.py  test_system.py  test_web.py  test_workspace.py
web/: app.js  index.html  styles.css
(+150 files in other folders)
